#2010 - fix right alignment

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/css/indicator.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/css/indicator.css
@@ -352,7 +352,7 @@
 
 /* Actions */
 .indicator-actions a.btn.hdx-btn {
-	margin-right: 12px;
+	margin-left: 12px;
 }
 /* .indicator-actions {
 	margin-top: 10px;
